--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -17,6 +17,20 @@
     &:focus {
         outline: none;
     }
+
+    &[type="number"]::-webkit-outer-spin-button,
+    &[type="number"]::-webkit-inner-spin-button {
+        appearance: none;
+    }
+
+    &[type="number"] {
+        appearance: textfield;
+
+        &:hover,
+        &:focus {
+            appearance: menulist-button;
+        }
+    }
 }
 
 .caretWrapper {
@@ -32,6 +46,10 @@
     left: 0;
     position: absolute;
     animation: blink 0.7s forwards infinite;
+}
+
+.readonly {
+    opacity: 0.7;
 }
 
 @keyframes blink {
