--- a/src/app/styles/themes/orange.scss
+++ b/src/app/styles/themes/orange.scss
@@ -5,4 +5,11 @@
     --secondary-color: #d01f0e;
     --inverted-primary-color: #dbd5de;
     --inverted-secondary-color: #faf4fb;
+
+    //skeleton
+    --skeleton-color: #fff;
+    --skeleton-shadow: rgba(0 0 0 / 20%);
+
+    //code
+    --code-bg: #fff;
 }
